<resources>
    <string name="app_name">first_android_application</string>
    <string name="hello">Hello Nepal</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repassword">Re-password</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="email">Email</string>
</resources>